New matrix evaluation tools to aid report

--- a/.gitignore
+++ b/.gitignore
@@ -189,3 +189,4 @@ cython_debug/
 /matrix_model/removed/PTdataM_HT.xlsx
 /.idea/vcs.xml
 /vector_model/figures/
+/vector_model/model_evaluation_results.csv
